# cpp_learn_02_linuxProgram

./: .gitignore  CMakeLists.txt
_01_linux_basic/: linux基础命令.md
_02_makefile/: gcc和makefile.md  编译.md
_02_makefile/_01_staticLib/: useStaticLib.cpp
_02_staticLibraryAndSharedLibrary/: 动态库和静态库.md  编译.md
_02_staticLibraryAndSharedLibrary/_01_gccCompile/: gccCompileMain.c
_02_staticLibraryAndSharedLibrary/_02_staticLib/: useStaticLib.c  useStaticLib.cpp  useStaticLibMain.c  useStaticLibMain.cpp
_02_staticLibraryAndSharedLibrary/_02_staticLib/resource/: sub.c
_02_staticLibraryAndSharedLibrary/_03_sharedLIb/: useSharedLibMain.c  useSharedLibMain.cpp
_02_staticLibraryAndSharedLibrary/_03_sharedLIb/resource/: add.c  myMath.h
_03_makefile/: makefile知识点.md
_03_makefile/_01_useMakefile/: case1.makefile  case2.makefile  case3.makefile  case4.makefile  makefile  useMakefileMain.c  useMakefileMain.cpp  var.makefile
_03_makefile/_01_useMakefile/resource/: myMath.h  sub.c
_04_gdb/: gdb调试.md
_04_gdb/_01_useGdb/: makefile
_04_gdb/_01_useGdb/resource/: add.c
_05_cmakeAndVscode/: cmake和vscode.md
_05_vscode/: vscode.md
_05_vscode/_01_vscodeProject/: CMakeLists.txt  helloCmake.cpp
_06_cmake/: CMakeList._basic_.txt  CMakeLists.txt  CMakeLists_CXX_X_auto.txt  cmake.md
_06_cmake/config/: config.h.in
_06_cmake/script/: start.sh
_06_cmake/src/: 2mainUseMakefile.c  helloCmake.cpp
_06_cmake/src/myLibrary/sharedLibCode/: CMakeLists.txt  div.cpp  mul.cpp  myMathShared.h
_06_cmake/src/myLibrary/staticLibCode/: CMakeLists.txt  add.cpp  myMathStatic.h  sub.cpp
_07_linux_IO/: CMakeLists.txt  linux_IO知识点.md
_07_linux_IO/script/: start.sh
_07_linux_IO/src/: _01_mainBasicIO.c  _02_main_blockAndNonBlock.c
